--- a/teamtrackbackend/src/main/resources/application.yml
+++ b/teamtrackbackend/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/teamtrack
     username: root
-    password: ZAQ!2wsx
+    password: root
     driver-class-name: com.mysql.jdbc.Driver
   jpa:
     hibernate:
